Fix contact form spacing

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,11 @@ html {
 }
 
 section {
-  @apply px-6 pt-16 pb-6;
+  @apply px-6 pb-6;
+}
+
+section:not(#contact) {
+  @apply pt-16;
 }
 
 /* Intro */
